fixing the alignments

--- a/style.css
+++ b/style.css
@@ -149,6 +149,8 @@ img {
   border-radius: 50%;
   margin-bottom: 15px;
   margin-right: 10px;
+  margin-top: 8px;
+  
 }
 
 .cases img:hover {
@@ -269,17 +271,25 @@ img {
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: auto;
+  margin:1em;
   text-align: center;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+  height: fit-content;
+
 }
 
 .info {
-  font-size: 15px;
+  font-size: 10px;
   line-height: 24px;
+  height: auto;
+  padding: 5px;
+  margin-bottom: 1em;
+  margin-top: 1em;
+  box-sizing: border-box;
   
 }
 
@@ -315,6 +325,7 @@ img {
   margin-bottom: 20px;
   font-weight: bold;
 }
+
 
 
 /* Media Queries */
